# una-apps

./: .gitignore  .gitmodules  diff.txt
.github/scripts/: generate-app-list.py
.github/workflows/: apps-ci.yml
Apps/: .gitignore
Apps/Alarm/Common/Libs/Header/: AppTypes.hpp
Apps/Alarm/Output/Release/: Alarm_0.0.2.uapp  Alarm_0.0.3.uapp  Alarm_0.0.4.uapp  Alarm_0.1.0.uapp
Apps/Alarm/Output/Tmp/: AlarmGUI-CubeIDE.gui  AlarmService-CubeIDE.srv
Apps/Alarm/Service/Output/: Alarm_0.0.uapp  userapp_0.0.uapp
Apps/Alarm/Software/Apps/Alarm-CMake/: CMakeLists.txt
Apps/Alarm/Software/Apps/AlarmGUI-CubeIDE/: .cproject  .project
Apps/Alarm/Software/Apps/AlarmService-CubeIDE/: .cproject  .project  STM32U575QIIXQ_RAM.ld
Apps/Alarm/Software/Apps/TouchGFX-GUI/: AlarmGUI.touchgfx  touchgfx.cmake
Apps/Alarm/Software/Libs/Header/: Alarm.hpp  AlarmManager.hpp  AppTypes.hpp  Commands.hpp  GSModel.hpp  Service.hpp
Apps/Alarm/Software/Libs/Sources/: AlarmManager.cpp  GSModel.cpp  Service.cpp
Apps/Cycling/Output/Release/: Cycling_0.1.0.uapp  Cycling_0.1.1.uapp  Cycling_0.1.5.uapp
Apps/Cycling/Software/Apps/Cycling-CMake/: CMakeLists.txt
Apps/Cycling/Software/Apps/CyclingGUI-CubeIDE/: .project
Apps/Cycling/Software/Apps/CyclingService-CubeIDE/: .cproject  .project
Apps/Cycling/Software/Apps/TouchGFX-GUI/: CyclingGUI.touchgfx  touchgfx.cmake
Apps/Cycling/Software/Libs/Header/: ActivitySummary.hpp  ActivitySummarySerializer.hpp  ActivityWriter.hpp  AppMenu.hpp  Commands.hpp  Service.hpp  Settings.hpp  SettingsSerializer.hpp  Track.hpp  TrackInfo.hpp  icon_30x30.h  icon_60x60.h
Apps/Cycling/Software/Libs/Sources/: ActivitySummarySerializer.cpp  ActivityWriter.cpp  Service.cpp  SettingsSerializer.cpp
Apps/EmptyApp/Output/: EmptyApp_0.0.uapp
Apps/Glance1/Output/Release/: Glance1_0.0.1.uapp
Apps/Glance1/Software/App/Service-CubeIDE/: .cproject  .project
Apps/Glance1/Software/Libs/Header/: Clock24.h  Service.hpp
Apps/Glance1/Software/Libs/Source/: Service.cpp  UserAppEntry.cpp
Apps/GlanceARHR/Output/Release/: GAvgRestHR_0.1.0.uapp  GlanceHR_0.0.2.uapp
Apps/GlanceARHR/Software/App/GlanceARHR-CMake/: CMakeLists.txt
Apps/GlanceARHR/Software/App/GlanceARHR-Service-CubeIDE/: .cproject  .project
Apps/GlanceARHR/Software/Libs/Header/: Service.hpp  icon_30x30.h
Apps/GlanceARHR/Software/Libs/Source/: Service.cpp
Apps/GlanceActivity/Output/Release/: GActivityMins_0.1.0.uapp  GlanceSteps_0.0.2.uapp
Apps/GlanceActivity/Software/App/GlanceActivity-CMake/: CMakeLists.txt
Apps/GlanceActivity/Software/App/GlanceActivity-Service-CubeIDE/: .project
Apps/GlanceActivity/Software/Libs/Header/: IconActivity.h  Service.hpp  icon_60x60.h
Apps/GlanceActivity/Software/Libs/Source/: Service.cpp
Apps/GlanceBattery/Software/App/GlanceBattery-CMake/: CMakeLists.txt
Apps/GlanceBattery/Software/App/GlanceBattery-Service-CubeIDE/: .cproject  .project
Apps/GlanceBattery/Software/Libs/Header/: IconsBattery.h  Service.hpp  icon_60x60.h
Apps/GlanceBattery/Software/Libs/Source/: Service.cpp
Apps/GlanceFloors/Output/Release/: GFloors_0.1.0.uapp  GlanceFloors_0.0.1.uapp  GlanceFloors_0.0.2.uapp
Apps/GlanceFloors/Software/App/GlanceFloors-CMake/: CMakeLists.txt
Apps/GlanceFloors/Software/App/GlanceFloors-Service-CubeIDE/: .cproject  .gitignore  .project  Linker.ld
Apps/GlanceFloors/Software/App/GlanceFloorsSRV-CubeIDE/: .project
Apps/GlanceFloors/Software/Libs/Header/: IconFloors.h  Service.hpp  icon_30x30.h  icon_60x60.h
Apps/GlanceFloors/Software/Libs/Source/: Service.cpp
Apps/GlanceHR/Output/Release/: GLiveHR_0.1.0.uapp  GlanceHR_0.0.1.uapp
Apps/GlanceHR/Software/App/GlanceHR-CMake/: CMakeLists.txt
Apps/GlanceHR/Software/App/GlanceHR-Service-CubeIDE/: .cproject  .project
Apps/GlanceHR/Software/Libs/Header/: IconHR.h  Service.hpp  icon_28x33.h  icon_30x30.h  icon_60x60.h
Apps/GlanceHR/Software/Libs/Source/: Service.cpp
Apps/GlanceSteps/Output/Release/: GSteps_0.1.0.uapp  GlanceSteps_0.0.1.uapp
Apps/GlanceSteps/Software/App/GlanceSteps-CMake/: CMakeLists.txt
Apps/GlanceSteps/Software/App/GlanceSteps-Service-CubeIDE/: .cproject  .project
Apps/GlanceSteps/Software/Libs/Header/: IconSteps.h  Service.hpp  icon_30x30.h  icon_60x60.h
Apps/GlanceSteps/Software/Libs/Source/: Service.cpp
Apps/GlanceStrain/: ARCHITECTURE.md  strain_inspector.html
Apps/GlanceStrain/Software/App/GlanceStrain-CMake/: CMakeLists.txt
Apps/GlanceStrain/Software/Libs/Header/: Service.hpp  (+1 more)
Apps/HRMonitor/Output/Release/: HRMon_0.0.0.uapp  HRMon_0.0.1.uapp  HRMon_0.0.3.uapp  HRMon_0.0.4.uapp  HRMon_0.0.5.uapp  HRMon_0.0.6.uapp
Apps/Hiking-hr-test/Output/Release/: Hiking_0.0.1.uapp
Apps/Hiking/Common/Header/: ActivitySummary.hpp  Settings.hpp
Apps/Hiking/Output/: .gitignore  Hiking_0.0.0.uapp  Hiking_1.2.3.uapp
Apps/Hiking/Output/Release/: Hiking_0.0.3.uapp  Hiking_0.0.4.uapp  Hiking_0.0.5.uapp  Hiking_0.0.6.uapp  Hiking_0.1.0.uapp  Hiking_0.1.1.uapp  Hiking_0.1.5.uapp
Apps/Hiking/Service/Output/: .gitignore
Apps/Proof/GUI/Output/: ProofGUI_0.0.uapp  ProofGUI_0.0_uapp.h
Apps/Proof/Service/Output/: ProofService_0.0.uapp  ProofService_0.0_uapp.h
Apps/Running/Output/Release/: Running_0.0.0.uapp  Running_0.0.1.uapp  Running_0.0.2.uapp  Running_0.1.0.uapp  Running_0.1.5.uapp
Apps/Running/Software/Apps/Running-CMake/: CMakeLists.txt  toolchain-arm-none-eabi.cmake
Apps/Running/Software/Libs/: libs.cmake
Apps/Utility1/GUI/Output/: Utility1GUI_0.0.uapp  Utility1GUI_0.0_uapp.h  userapp_0.0.uapp  userapp_0.0_uapp.h
Apps/Utility1/Output/: Utility1_1.2.3.uapp
Apps/Utility1/Output/Tmp/: Utility1GUI-CubeIDE.gui  Utility1Service-CubeIDE.srv
Apps/Utility1/Service/Output/: Utility1_0.0.uapp  Utility1_0.0_uapp.h  Utility1_merged.h  merged.uapp  userapp_0.0.uapp  userapp_0.0_uapp.h
Apps/Utility2/GUI/Output/: Utility2GUI_0.0.uapp  Utility2GUI_0.0_uapp.h  userapp_0.0.uapp  userapp_0.0_uapp.h
Apps/Utility2/Output/: .gitignore
Apps/Utility2/Service/Output/: Utility2_0.0.uapp  Utility2_0.0_uapp.h  Utility2_merged.h  merged.uapp  userapp_0.0.uapp  userapp_0.0_uapp.h
(+1006 files in other folders)
